--- a/_config.yml
+++ b/_config.yml
@@ -17,19 +17,19 @@ title: MatJek
 description: > # this means to ignore newlines until "baseurl:"
   Material theme based on <a href="http://materializecss.com">Materialize.css</a> for jekyll sites
 baseurl: "/matjek"
-url: "https://bobcatzoo.github.io"
+url: "https://shawnteoh.github.io"
 permalink: /:year/:month/:day/:title
 repository: ShawnTeoh/matjek
 paginate: 5
 
 # MatJek specific configurations
-#github_profile: "https://github.com/bobcatzoo"
-#user: "Alex"
-#user_email: "bobcatzoo@outlook.com"
-#contact_url: ""
-#google_tracking_id: ""
-#google_site_verification: ""
-#disqus_shortname: "AZ"
+github_profile: "https://github.com/ShawnTeoh"
+user: "John Doe"
+user_email: "john@doe.com"
+contact_url: "https://goo.gl/tVljbV"
+google_tracking_id: "UA-96359860-1"
+google_site_verification: "UA-96359860-1"
+disqus_shortname: "matjek"
 
 # Build settings
 markdown: kramdown
