--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Alex's Blog
-email: bobcatzoo@outlook.com.com
+email: bobcatzoo@outlook.com
 author: bobcatzoo
 copyright: Copyright © 1970-2010
 description: >- # this means to ignore newlines until "baseurl:"
