--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-favicon: "./../img/favicon.png" # the favicon for your site
+favicon: "img/favicon.png" # the favicon for your site
 
 # theme: owner/name --> Don't forget to remove/comment the gem-based theme option
 remote_theme: "jeffreytse/jekyll-theme-yat"
