--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Alex
+title: Alex's Blog
 description: > # this means to ignore newlines until "baseurl:"
   Material theme based on <a href="http://materializecss.com">Materialize.css</a> for jekyll sites
 baseurl: ""
@@ -24,7 +24,7 @@ paginate: 5
 
 # MatJek specific configurations
 github_profile: "https://github.com/bobcatzoo"
-user: "Jarry Alex"
+user: "Alex"
 user_email: "bobcatzoo@outlook.com"
 contact_url: 
 google_tracking_id: 
