--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Alex's Blog
 description: > # this means to ignore newlines until "baseurl:"
-  Material theme based on <a href="http://materializecss.com">Materialize.css</a> for jekyll sites
+  基于 Jekyll 的 Github Pages 个人博客网站，记录工作生活与学习中的点点滴滴。。。🐱
 baseurl: ""
 url: "https://bobcatzoo.github.io"
 github_repo: "https://github.com/bobcatzoo/bobcatzoo.github.io"
