--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: 见贤思齐焉，见不贤而内自省也。
+title: 见贤思齐
 description: > # this means to ignore newlines until "baseurl:"
-  基于 Jekyll 的 Github Pages 个人博客网站，记录工作生活与学习中的点点滴滴。。。🐱
+  基于 Jekyll 的 Github Pages 个人博客网站，记录工作生活与学习中的点点滴滴...
 baseurl: ""
 url: "https://bobcatzoo.github.io"
 github_repo: "https://github.com/bobcatzoo/bobcatzoo.github.io"
@@ -33,6 +33,7 @@ google_tracking_id:
 google_site_verification: 
 disqus_shortname: "alex"
 
+# 还不知道怎么实现
 douban_username:  # 你的豆瓣id
 twitter_username: realJarryCat
 github_username: 
@@ -40,10 +41,6 @@ facebook_username:
 weibo_username: 
 zhihu_username: tomcat-63-60
 
-# valine 评论插件配置
-valine:
-  leancloud_appid: "lPecgqbFAAuuCvD2R2fMNbbC-gzGzoHsz"
-  leancloud_appkey: "VSbc5y1DaHu1Sn5PSD1g8QMA"
 
 # Build settings
 markdown: kramdown
@@ -58,4 +55,4 @@ exclude:
 sass:
   style: compressed
 future: true
-lang: zh_CN
+# lang: zh_CN
