--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: 见贤思齐
 description: > # this means to ignore newlines until "baseurl:"
-  基于 Jekyll 的 Github Pages 个人博客网站，记录工作生活与学习中的点点滴滴...
+  基于 Jekyll 的 Github Pages 个人博客网站，记录工作生活与学习中的点点滴滴。。。
 baseurl: ""
 url: "https://bobcatzoo.github.io"
 github_repo: "https://github.com/bobcatzoo/bobcatzoo.github.io"
@@ -23,6 +23,8 @@ github_profile: "https://github.com/bobcatzoo"
 permalink: /:year/:month/:day/:title
 repository: 
 paginate: 5 #每页显示5篇文章
+nick_name: "思贤" # 昵称
+english_name: "Alex"
 
 # MatJek specific configurations
 #github_profile: "https://github.com/bobcatzoo"
@@ -32,14 +34,6 @@ contact_url: "https://forms.office.com/r/jMwZkxUzF9" #用于contact页面
 google_tracking_id: 
 google_site_verification: 
 disqus_shortname: "alex"
-
-# 还不知道怎么实现
-douban_username:  # 你的豆瓣id
-twitter_username: realJarryCat
-github_username: 
-facebook_username: 
-weibo_username: 
-zhihu_username: tomcat-63-60
 
 
 # Build settings
