--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,8 @@ kramdown:
 
 
 # Disqus settings
-disqus_username: bobcatzoo
+comments_provider: disqus
+disqus_username: https-github-com-bobcatzoo-bobcatzoo-github-io
 
 # Netease settings
 netease_comment: false
