--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: 见贤思齐的博客 | Alex Blog
 header-img: img/home-bg.jpg
 email: bobcatzoo@outlook.com
 description: "概率，数据，markdown，gis，历史"
-keyword: "Alex，见贤思齐，概率，$\latex$"
+keyword: "Alex，见贤思齐，概率，历史，拜占庭"
 # url: "https://huangxuan.me"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
@@ -13,7 +13,7 @@ future: true
 
 # SNS settings
 RSS: false
-weibo_username:     huxpro
+#weibo_username:     huxpro
 zhihu_username:     huxpro
 github_username:    huxpro
 twitter_username:   huxpro
@@ -59,10 +59,10 @@ kramdown:
 
 
 # Disqus settings
-# disqus_username: hux
+disqus_username: hux
 
 # Netease settings
-netease_comment: true
+netease_comment: false
 
 
 
