--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ future: true
 # SNS settings
 RSS: false
 #weibo_username:     huxpro
-zhihu_username:     huxpro
-github_username:    huxpro
-twitter_username:   huxpro
+zhihu_username:     tomcat-63-60
+github_username:    bobcatzoo
+twitter_username:   realJarryCat
 #facebook_username:  huxpro
 #linkedin_username:  firstname-lastname-idxxxx
 
