--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Alex Blog
 SEOTitle: 见贤思齐的博客 | Alex Blog
 header-img: img/home-bg.jpg
 email: bobcatzoo@outlook.com
-description: "概率，数据，markdown，gis，历史"
+description: "初等数学，概率论，随机微积分，金融，历史，财务"
 keyword: "Alex，见贤思齐，概率，历史，拜占庭"
 # url: "https://huangxuan.me"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
@@ -78,7 +78,7 @@ netease_comment: false
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "概率，数据，markdown，gis，历史"
+sidebar-about-description: "初等数学，概率论，随机微积分，金融，历史，财务"
 sidebar-avatar: /img/avatar-hux-ny.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
